--- a/public/src/styles/components.css
+++ b/public/src/styles/components.css
@@ -251,10 +251,7 @@
 
 /* ---- Bottom navigation ---- */
 .bottom-nav {
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
+  flex-shrink: 0;
   z-index: 20;
   display: flex;
   justify-content: space-around;
